# clairview

./: .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .test_durations  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.base.yml  docker-compose.dev-full.yml  docker-compose.dev.yml  docker-compose.hobby.yml  docker-compose.yml  ecosystem.config.cjs  jest.config.ts  latest_migrations.manifest  license  manage.py  mypy-baseline.txt  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  security.md  tsconfig.json  unit.json.tpl  webpack.config.js
.changeset/: config.json
.devcontainer/: Dockerfile  container_start.sh  devcontainer.json
.github/: pull_request_template.md  renovate.json
.run/: Celery Beat.run.xml  Celery Threads.run.xml  Celery.run.xml  Dev.run.xml  MarketTor.run.xml  Plugin Server.run.xml
.storybook/: preview.tsx
api/: package.json  tsconfig.json
app/: histoire.config.ts  index.html  package.json  readme.md  tsconfig.json  vite.config.js
clairql_parser/: CONTRIBUTING.md  ClairQLLexer.h  ClairQLParser.cpp  ClairQLParser.h  ClairQLParser.interp  ClairQLParserBaseVisitor.h  ClairQLParserVisitor.h  __init__.pyi  error.h  setup.py
clairview/: __init__.py  apps.py  asgi.py  auth.py  cache_utils.py  celery.py  cli.js  client.py  conftest.py  constants.py  dbrouter.py  decorators.py  email.py  errors.py  event_usage.py  exceptions.py  health.py  jwt.py  metrics.py  middleware.py  package.json  permissions.py  ph_client.py  rate_limit.py  readme.md  schema.py  schema_helpers.py  types.py  udf_versioner.py  urls.py  user_permissions.py  utils.py  utils_cors.py  version_requirement.py  views.py  wsgi.py
clairvm/: CHANGELOG.md  README.md  test.sh
cypress/: README.md  wait.py
docs/: dictionary.txt  index.md  netlify.toml  package.json  tsconfig.node.json
ee/: LICENSE  conftest.py  pytest.ini  settings.py  urls.py
eslint-rules/: README.md
frontend/: build.mjs  editor-update-tsd.mjs  utils.mjs
funnel-udf/: build.sh
hogql_parser/: CONTRIBUTING.md  README.md  __init__.pyi  parser.cpp  setup.py
hogvm/: CHANGELOG.md
livestream/: .mockery.yaml  Dockerfile  README.md  clairview.go  filter.go  filter_test.go  geoip_test.go  go.mod  jwt.go  kafka.go  kafka_test.go  live_stats.go  main.go  markettor.go  start.sh
markettor/: __init__.py  apps.py  asgi.py  auth.py  cache_utils.py  celery.py  client.py  conftest.py  constants.py  dbrouter.py  decorators.py  email.py  errors.py  event_usage.py  exceptions.py  health.py  jwt.py  metrics.py  middleware.py  permissions.py  schema.py  (+12 more)
(+7099 files in other folders)
